--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: Lighthouse CI
-on: push
+on:
+  push
+  schedule:
+    - cron: '0 */8 * * *'
 jobs:
   lighthouse:
     runs-on: ubuntu-latest
