--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           urls: |
             https://www.unibo.it/it
-          budgetPath: .github/lighthouse/budget.json # test performance budgets
+          budgetPath: .github/lighthouse/bad.json # test performance budgets
           uploadArtifacts: true # save results as an action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
