--- a/.github/workflows/sod.yml
+++ b/.github/workflows/sod.yml
@@ -14,6 +14,6 @@ jobs:
           urls: |
             https://almaorienta.unibo.it/it
             https://site.unibo.it/idea/it
-          budgetPath: .github/lighthouse/budget.json # test performance budgets
+          budgetPath: .github/lighthouse/bad.json # test performance budgets
           uploadArtifacts: true # save results as an action artifacts
           temporaryPublicStorage: true # upload lighthouse report to the temporary storage
